--- a/MQTTChat/Base.lproj/Main.storyboard
+++ b/MQTTChat/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6162" systemVersion="14A238h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6185.7" systemVersion="14A283o" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="1AI-d8-6YZ">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6160"/>
+        <deployment defaultVersion="1808" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6181.2"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Chat View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ChatViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -17,9 +18,109 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="d10-D7-byG">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="rDH-hK-5aa">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="hfo-6t-B5o">
+                                <rect key="frame" x="-23" y="-15" width="106" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Logoff">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="logoff:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="0OJ-sK-idq"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1469" y="844"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Qxc-v5-evX">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1AI-d8-6YZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="20I-LW-icL">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="u4U-9m-Wej" kind="relationship" relationship="rootViewController" id="yaa-s1-EOI"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g7K-lj-p6U" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="305" y="844"/>
+        </scene>
+        <!--Please Login-->
+        <scene sceneID="2s3-Ca-MJZ">
+            <objects>
+                <viewController id="u4U-9m-Wej" customClass="LoginViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="zzS-vJ-Rw0"/>
+                        <viewControllerLayoutGuide type="bottom" id="cDg-Dl-USY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="jIN-3A-VlB">
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mosquitoChatLogin.png" translatesAutoresizingMaskIntoConstraints="NO" id="Gic-hz-sPv">
+                                <rect key="frame" x="0.0" y="64" width="480" height="416"/>
+                            </imageView>
+                            <view alpha="0.64999999999999969" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YRS-sc-dYv">
+                                <rect key="frame" x="0.0" y="335" width="480" height="145"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="145" id="WEt-de-dZn"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BBe-rs-T3n">
+                                <rect key="frame" x="95" y="372" width="290" height="62"/>
+                                <state key="normal" image="loginOn">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="disabled" image="loginOff.png"/>
+                                <state key="selected" image="loginOff"/>
+                                <state key="highlighted" image="loginOff"/>
+                                <connections>
+                                    <action selector="loginToTwiiter:" destination="u4U-9m-Wej" eventType="touchUpInside" id="7ef-MQ-zWM"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="YRS-sc-dYv" firstAttribute="centerX" secondItem="BBe-rs-T3n" secondAttribute="centerX" id="51c-CX-DC6"/>
+                            <constraint firstItem="YRS-sc-dYv" firstAttribute="leading" secondItem="jIN-3A-VlB" secondAttribute="leading" id="534-Dq-miw"/>
+                            <constraint firstAttribute="trailing" secondItem="Gic-hz-sPv" secondAttribute="trailing" id="DXW-dF-dLR"/>
+                            <constraint firstItem="cDg-Dl-USY" firstAttribute="top" secondItem="Gic-hz-sPv" secondAttribute="bottom" id="Uye-Kx-DnP"/>
+                            <constraint firstItem="YRS-sc-dYv" firstAttribute="centerY" secondItem="BBe-rs-T3n" secondAttribute="centerY" constant="4.5" id="gK2-ru-e6O"/>
+                            <constraint firstItem="cDg-Dl-USY" firstAttribute="top" secondItem="YRS-sc-dYv" secondAttribute="bottom" id="noG-XU-0JW"/>
+                            <constraint firstAttribute="trailing" secondItem="YRS-sc-dYv" secondAttribute="trailing" id="pkn-em-iqq"/>
+                            <constraint firstAttribute="centerX" secondItem="BBe-rs-T3n" secondAttribute="centerX" id="tFL-0t-HB9"/>
+                            <constraint firstItem="Gic-hz-sPv" firstAttribute="leading" secondItem="jIN-3A-VlB" secondAttribute="leading" id="tca-Zf-A2f"/>
+                            <constraint firstItem="Gic-hz-sPv" firstAttribute="top" secondItem="zzS-vJ-Rw0" secondAttribute="bottom" id="yZ0-11-viv"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Please Login" id="eht-gu-Zr6"/>
+                    <connections>
+                        <outlet property="loginButton" destination="BBe-rs-T3n" id="exV-Z6-gRM"/>
+                        <outlet property="loginButtonView" destination="YRS-sc-dYv" id="OP0-mQ-jOE"/>
+                        <outlet property="loginButtonViewConstraint" destination="noG-XU-0JW" id="KFu-xo-Xte"/>
+                        <segue destination="vXZ-lx-hvc" kind="show" identifier="showChatSegue" id="Yaf-NS-WnQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rsV-gR-u0i" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="879" y="844"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="loginOff" width="290" height="62"/>
+        <image name="loginOff.png" width="290" height="62"/>
+        <image name="loginOn" width="290" height="62"/>
+        <image name="mosquitoChatLogin.png" width="320" height="568"/>
+    </resources>
 </document>
